feat: support jdk 8